# ProjetLangGraph_Willy

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.batch  Dockerfile.mcp  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
claude_context/: Launch_Eval.ipynb  N8N_eval.json  Sheet Eval v2.ipynb  Sheet Eval.ipynb
data/: golden_dataset.json
logs/: errors_2026_06_24_23h31.jsonl  errors_2026_06_26_11h51.jsonl  errors_2026_06_26_12h08.jsonl  errors_2026_06_26_13h22.jsonl  errors_2026_06_26_13h58.jsonl  errors_2026_06_26_14h10.jsonl  errors_2026_06_26_14h18.jsonl  resultats_2026_06_24_12h01.jsonl  resultats_2026_06_24_14h13.jsonl  resultats_2026_06_24_15h27.jsonl  resultats_2026_06_24_23h08.jsonl  resultats_2026_06_25_10h47.jsonl  resultats_2026_06_25_10h57.jsonl  resultats_2026_06_25_11h26.jsonl  resultats_2026_06_25_11h28.jsonl  resultats_2026_06_25_11h30.json  resultats_2026_06_25_11h30.jsonl  resultats_2026_06_25_11h51.jsonl  resultats_2026_06_26_10h13.jsonl
scripts/: colab_batch_runner.ipynb  gemini_thought_probe.py  index_pinecone.py  normalize_kong_response.py  test_langfuse.py  token_probe.ipynb
scripts/tests/: input.json  verify_signature.py
src/agentic4api/: __init__.py
src/agentic4api/batch/: __init__.py  golden.py  logger.py  run_batch.py  sheet_writer.py
src/agentic4api/chat/: __init__.py  app.py
src/agentic4api/config/: __init__.py  settings.py
src/agentic4api/graph/: __init__.py  build.py  nodes.py  prompts.py  retriever.py  state.py  tools.py  transports.py
src/agentic4api/mcp/: server.py
src/agentic4api/observability/: langfuse_helper.py
tests/: __init__.py  conftest.py  test_batch.py  test_graph.py
