[project]
name = "agentic4api"
version = "0.1.0"
description = "Découverte sémantique d'API : agent LangGraph (Pinecone + Gemini), chat Chainlit + batch d'éval vers Google Sheet."
requires-python = ">=3.10"

dependencies = [
    # --- Orchestration ---
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",         # client LLM + embeddings (API OpenAI-compat exposée par Kong)
    "pinecone>=3.0.0",   # SDK officiel Pinecone (ex-`pinecone-client`). langchain-pinecone non requis : on appelle Pinecone directement.
    # --- Chat ---
    "chainlit>=1.3.0",
    # --- Batch / Sheet ---
    "gspread>=6.0.0",
    "google-auth>=2.30.0",
    "pandas>=2.0.0",
    # --- Config ---
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
# server.py optionnel (endpoint HTTP) :
server = ["fastapi>=0.110.0", "uvicorn>=0.30.0"]
# Notebook d'évaluation (claude_context/Sheet Eval.ipynb) :
eval = [
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "openpyxl>=3.1.0",              # export Excel
    "google-auth-oauthlib>=1.2.0",  # OAuth2 local (token.json) pour gspread
    "python-dotenv>=1.0.0",         # chargement .env dans le notebook
]

[project.scripts]
# Permet : `agentic4api-batch --limit 5`
agentic4api-batch = "agentic4api.batch.run_batch:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
